# rust_mini_projects

./: .gitignore  Cargo.toml  README.md
01_calc_median/: Cargo.toml  README.md
01_calc_median/src/: main.rs
02_find_uniq/: Cargo.toml  README.md
02_find_uniq/src/: main.rs
03_print_any/: Cargo.toml
03_print_any/src/: main.rs
04_insensitive_sort/: Cargo.toml
04_insensitive_sort/src/: main.rs
05_convert_txt_2_morse/: Cargo.toml
05_convert_txt_2_morse/src/: main.rs
06_cards/src/: main.rs
07_deadline/: Cargo.toml  README.md
07_deadline/src/: main.rs
08_convert_c_and_f/: Cargo.toml  README.md
08_convert_c_and_f/src/: main.rs
09_sum_list/: Cargo.toml  README.md
09_sum_list/src/: main.rs
10_calc_num_weeks_between_dates/: Cargo.toml
10_calc_num_weeks_between_dates/src/: main.rs
11_validate_isbn/: README.md
11_validate_isbn/src/: main.rs
12_file_exists/: Cargo.toml  README.md
12_file_exists/src/: main.rs
13_interpret_rgb_hex/: Cargo.toml  README.md
13_interpret_rgb_hex/src/: main.rs
14_run_len_encoding/: Cargo.toml  README.md
14_run_len_encoding/src/: main.rs
15_inconsistent_dates/: Cargo.toml  README.md
15_inconsistent_dates/src/: main.rs
16_travel_planner/src/: main.rs
17_vigenere_cipher/src/: main.rs
