[workspace]

members = [
    "calc_median",
    "find_uniq",
    "print_any",
    "insensitive_sort",
    "convert_txt_2_morse",
    "cards",
    "deadline",
    "convert_c_and_f",
    "sum_list",
    "calc_num_weeks_between_dates",
    "validate_isbn",
    "file_exists",
    "interpret_rgb_hex",
    "run_len_encoding",
    "inconsistent_dates",
    "travel_planner",
    "vigenere_cipher",
]
