[workspace]

members = [
    "01_calc_median",
    "02_find_uniq",
    "03_print_any",
    "04_insensitive_sort",
    "05_convert_txt_2_morse",
    "06_cards",
    "07_deadline",
    "08_convert_c_and_f",
    "09_sum_list",
    "10_calc_num_weeks_between_dates",
    "11_validate_isbn",
    "12_file_exists",
    "13_interpret_rgb_hex",
    "14_run_len_encoding",
    "15_inconsistent_dates",
    "16_travel_planner",
    "17_vigenere_cipher",
]
